<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.yolimaandrea.practica2.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/formulario"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/usuario"/>
        <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/eUsuario" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/contraseña"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/eContrasena"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/correoE"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/eCorreo"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/rMasculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/masculino"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/rFemenino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/masculino"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fechaNac"
        android:onClick="showDatePickerDialog"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/lugarNac"/>
        <Spinner
            android:id="@+id/lNacimiento"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <CheckBox android:id="@+id/chFutbol"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/futbol"
        android:onClick="onCheckboxClicked"/>
        <CheckBox android:id="@+id/chNatacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/natacion"
            android:onClick="onCheckboxClicked"
            android:checked="false" />
        <CheckBox android:id="@+id/chCine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cine"
            android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/chVideojuegos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/videojuego"
        android:onClick="onCheckboxClicked"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"
        android:onClick="onButtonClicked"
        />
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/Respuesta"
    android:textSize="10sp"/>
    </LinearLayout>





</LinearLayout>











